--- a/password_generator/requirements.txt
+++ b/password_generator/requirements.txt
@@ -21,3 +21,22 @@ password_generator/
 
 Install Flask
 pip install flask
+
+
+Install Flask CORS (if needed)
+1. backend/app.py should have the following:
+---
+from flask import Flask, jsonify
+from flask_cors import CORS  # <-- Add this
+
+import random
+import string
+
+app = Flask(__name__)
+CORS(app)  # <-- Add this to enable CORS
+---
+
+2. Install Flask CORS
+> pip install flask-cors
+
+
